Project

General

Profile

Actions

Bug #38760

closed

BlueFS might request more space from slow device than is actually needed

Added by Igor Fedotov about 5 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Development
Tags:
Backport:
nautilus, mimic, luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

When expanding slow device BlueFS has two sizes - one that it actually need for the current action and one that is a recommended expansion size measured prior to the actual expasion.
One might face the situation when the second requirement can be fulfilled due to the lack of space at the slow device. While the first one is fine. Which results in an unnecessary assertion.


Related issues 3 (0 open3 closed)

Copied to bluestore - Backport #38913: mimic: BlueFS might request more space from slow device than is actually neededRejectedActions
Copied to bluestore - Backport #38914: luminous: BlueFS might request more space from slow device than is actually neededRejectedActions
Copied to bluestore - Backport #38915: nautilus: BlueFS might request more space from slow device than is actually neededResolvedIgor FedotovActions
Actions #1

Updated by Igor Fedotov about 5 years ago

  • Status changed from 12 to Fix Under Review
  • Pull request ID set to 26939
Actions #2

Updated by Sage Weil about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to nautilus, mimic, luminous
Actions #3

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38913: mimic: BlueFS might request more space from slow device than is actually needed added
Actions #4

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38914: luminous: BlueFS might request more space from slow device than is actually needed added
Actions #5

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38915: nautilus: BlueFS might request more space from slow device than is actually needed added
Actions #6

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions #7

Updated by Nathan Cutler about 5 years ago

Igor writes: [luminous and mimic backports] not needed since we don't have explicit space allocation from BlueFS in mimic/luminous

Actions

Also available in: Atom PDF