os/bluestore be more tolerant to lack of space for bluefs.

'gift' space is just advisory for allocation, part of it actually requested
from BlueFS is mandatory only. Hence do not fail when unable to allocate
the whole space.

Fixes: https://tracker.ceph.com/issues/38760
Signed-off-by: Igor Fedotov <ifedotov@suse.com>